--- a/source/Vulcan.Commands.Network/Vulcan.Commands.Network.csproj
+++ b/source/Vulcan.Commands.Network/Vulcan.Commands.Network.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{38082E50-4D18-4905-AC6D-B6ACEE0572FD}</ProjectGuid>
+    <ProjectGuid>{39530480-D976-483D-8154-0FB428E30110}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Vulcan.Exports</RootNamespace>
-    <AssemblyName>Vulcan.Exports</AssemblyName>
+    <RootNamespace>Vulcan.Commands.Network</RootNamespace>
+    <AssemblyName>Vulcan.Commands.Network</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,7 +32,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,29 +40,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands\CommandState.cs" />
-    <Compile Include="Commands\Response.cs" />
-    <Compile Include="View\CommandView.cs" />
-    <Compile Include="Commands\Command.cs" />
-    <Compile Include="Commands\CommandBehavior.cs" />
-    <Compile Include="Handlers\CommandHandler.cs" />
-    <Compile Include="Commands\CommentCommand.cs" />
-    <Compile Include="Interfaces\ICommand.cs" />
-    <Compile Include="Interfaces\ICommandBehavior.cs" />
-    <Compile Include="Interfaces\ICommandHandler.cs" />
-    <Compile Include="Interfaces\ICommandIdentity.cs" />
-    <Compile Include="Interfaces\IContext.cs" />
-    <Compile Include="Interfaces\IResponse.cs" />
-    <Compile Include="Commands\Variables\SetVariableCommand.cs" />
-    <Compile Include="DisposableObject.cs" />
-    <Compile Include="Interfaces\IConfigurationSettings.cs" />
-    <Compile Include="Interfaces\IDisposableObject.cs" />
-    <Compile Include="Interfaces\ISmtpServer.cs" />
-    <Compile Include="Interfaces\IVariable.cs" />
+    <Compile Include="Email\EmailSender.cs" />
+    <Compile Include="Email\EmailTaskModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="View\CommandViewModel.cs" />
+    <Compile Include="Email\SmtpServer.cs" />
+    <Compile Include="Email\SmtpModel.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Vulcan.Exports\Vulcan.Exports.csproj">
+      <Project>{38082E50-4D18-4905-AC6D-B6ACEE0572FD}</Project>
+      <Name>Vulcan.Exports</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
