--- a/source/Vulcan.Exports/Vulcan.Exports.csproj
+++ b/source/Vulcan.Exports/Vulcan.Exports.csproj
@@ -55,10 +55,9 @@
     <Compile Include="Interfaces\IContext.cs" />
     <Compile Include="Interfaces\IResponse.cs" />
     <Compile Include="Commands\Variables\SetVariableCommand.cs" />
-    <Compile Include="DisposableObject.cs" />
+    <Compile Include="Disposable.cs" />
     <Compile Include="Interfaces\IConfigurationSettings.cs" />
     <Compile Include="Interfaces\IDisposableObject.cs" />
-    <Compile Include="Interfaces\ISmtpServer.cs" />
     <Compile Include="Interfaces\IVariable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\CommandViewModel.cs" />
