--- a/source/Vulcan.Exports/Vulcan.Exports.csproj
+++ b/source/Vulcan.Exports/Vulcan.Exports.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Commands\CommandState.cs" />
     <Compile Include="Commands\Response.cs" />
+    <Compile Include="Context.cs" />
     <Compile Include="View\CommandView.cs" />
     <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\CommandBehavior.cs" />
