--- a/source/Vulcan.Exports.Tests/Vulcan.Exports.Tests.csproj
+++ b/source/Vulcan.Exports.Tests/Vulcan.Exports.Tests.csproj
@@ -38,6 +38,8 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.XML" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDependentAssemblyPaths Condition=" '$(VS100COMNTOOLS)' != '' " Include="$(VS100COMNTOOLS)..\IDE\PrivateAssemblies">
@@ -45,12 +47,45 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\ConfigurationSourceBaseImpl.cs" />
+    <Compile Include="Classes\OptionsEnum.cs" />
+    <Compile Include="Classes\OSEnum.cs" />
+    <Compile Include="Classes\SectionGenerator.cs" />
+    <Compile Include="Configuration\CommandLineConfigurationSource.cs" />
+    <Compile Include="Configuration\ConfigurationSectionTests.cs" />
+    <Compile Include="Configuration\ConfigurationSourceBaseTests.cs" />
+    <Compile Include="Configuration\DotNetConfigSourceTests.cs" />
+    <Compile Include="Configuration\IniConfigurationSourceTests.cs" />
+    <Compile Include="Configuration\IsoStorageConfigurationSourceTests.cs" />
+    <Compile Include="Configuration\MediumTrustContext.cs" />
+    <Compile Include="Handlers\CommandHandlerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Configuration\RegistryConfigurationSourceTests.cs" />
+    <Compile Include="Configuration\SettingsConverterTests.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="UnitTestContext.cs" />
+    <Compile Include="Configuration\XmlConfigurationSourceTests.cs" />
+    <Compile Include="Util\UnitExt.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Integration\" />
     <Folder Include="Unit\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Vulcan.Exports\Vulcan.Exports.csproj">
+      <Project>{38082E50-4D18-4905-AC6D-B6ACEE0572FD}</Project>
+      <Name>Vulcan.Exports</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
