--- a/source/Vulcan.Exports/Vulcan.Exports.csproj
+++ b/source/Vulcan.Exports/Vulcan.Exports.csproj
@@ -43,6 +43,21 @@
   <ItemGroup>
     <Compile Include="Commands\CommandState.cs" />
     <Compile Include="Commands\Response.cs" />
+    <Compile Include="Configuration\AbstractConfigurationSource.cs" />
+    <Compile Include="Configuration\AbstractFileConfigurationSource.cs" />
+    <Compile Include="Configuration\ByteArrayConverter.cs" />
+    <Compile Include="Configuration\CommandLineConfigurationSource.cs" />
+    <Compile Include="Configuration\ConfigurationSection.cs" />
+    <Compile Include="Configuration\DotNetConfigurationSource.cs" />
+    <Compile Include="EventHandlerExtension.cs" />
+    <Compile Include="Configuration\IConfigurationSection.cs" />
+    <Compile Include="Configuration\IConfigurationSource.cs" />
+    <Compile Include="Configuration\IniConfigurationSource.cs" />
+    <Compile Include="Configuration\IsoStorageConfigurationSource.cs" />
+    <Compile Include="Configuration\RegistryConfigurationSource.cs" />
+    <Compile Include="Configuration\SettingConverter.cs" />
+    <Compile Include="Configuration\StringArrayConverter.cs" />
+    <Compile Include="Configuration\XmlConfigurationSource.cs" />
     <Compile Include="Context.cs" />
     <Compile Include="View\CommandView.cs" />
     <Compile Include="Commands\Command.cs" />
@@ -63,7 +78,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\CommandViewModel.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Vulcan.Resources\Vulcan.Resources.csproj">
+      <Project>{A1EC5409-EB0B-4D90-BC01-23182EA1CBED}</Project>
+      <Name>Vulcan.Resources</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
