--- a/source/Vulcan.Resources/Vulcan.Resources.csproj
+++ b/source/Vulcan.Resources/Vulcan.Resources.csproj
@@ -49,7 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Text.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Text.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
